@@ -32,6 +32,7 @@ imageMap['us-east-2a.min-jammy-x64']      = 'ami-085438ce84ab3ac76'             
 imageMap['us-east-2a.min-noble-x64']      = 'ami-0d1b5a8c13042c939'                 // ubuntu 24
 imageMap['us-east-2a.min-bullseye-x64']   = 'ami-0434754593ce7b895'                 // debian 11
 imageMap['us-east-2a.min-bookworm-x64']   = 'ami-065eb7eeb82248b49'                 // debian 12
+imageMap['us-east-2a.min-trixie-x64']     = 'ami-0e4a9a71af7af46ff'                 // debian 13
 
 imageMap['us-east-2b.min-rhel-8-x64']     = imageMap['us-east-2a.min-rhel-8-x64']
 imageMap['us-east-2b.min-ol-8-x64']       = imageMap['us-east-2a.min-ol-8-x64']     // oraclelinux 8
@@ -42,6 +43,7 @@ imageMap['us-east-2b.min-jammy-x64']      = imageMap['us-east-2a.min-jammy-x64']
 imageMap['us-east-2b.min-noble-x64']      = imageMap['us-east-2a.min-noble-x64']
 imageMap['us-east-2b.min-bullseye-x64']   = imageMap['us-east-2a.min-bullseye-x64']
 imageMap['us-east-2b.min-bookworm-x64']   = imageMap['us-east-2a.min-bookworm-x64']
+imageMap['us-east-2b.min-trixie-x64']     = imageMap['us-east-2a.min-trixie-x64']
 
 imageMap['us-east-2c.min-rhel-8-x64']     = imageMap['us-east-2a.min-rhel-8-x64']
 imageMap['us-east-2c.min-ol-8-x64']       = imageMap['us-east-2a.min-ol-8-x64']     // oraclelinux 8
@@ -52,6 +54,7 @@ imageMap['us-east-2c.min-jammy-x64']      = imageMap['us-east-2a.min-jammy-x64']
 imageMap['us-east-2c.min-noble-x64']      = imageMap['us-east-2a.min-noble-x64']
 imageMap['us-east-2c.min-bullseye-x64']   = imageMap['us-east-2a.min-bullseye-x64']
 imageMap['us-east-2c.min-bookworm-x64']   = imageMap['us-east-2a.min-bookworm-x64']
+imageMap['us-east-2c.min-trixie-x64']     = imageMap['us-east-2a.min-trixie-x64']
 
 // ARM64 based AMIs
 imageMap['us-east-2a.min-ol-8-arm64']       = 'ami-0f77cbbab56907b6c'               // oraclelinux 8.9 arm64
@@ -61,6 +64,7 @@ imageMap['us-east-2a.min-jammy-arm64']      = 'ami-0f732d76e7fad24ca'           
 imageMap['us-east-2a.min-noble-arm64']      = 'ami-019eeff96c2865995'               // ubuntu 24.04 arm64
 imageMap['us-east-2a.min-bullseye-arm64']   = 'ami-0d0902423ff93b14f'               // debian 11 arm64
 imageMap['us-east-2a.min-bookworm-arm64']   = 'ami-0de4c77901001cfe7'               // debian 12 arm64
+imageMap['us-east-2a.min-trixie-arm64']     = 'ami-0e80837acd137142b'               // debian 13 arm64
 
 imageMap['us-east-2b.min-ol-8-arm64']       = imageMap['us-east-2a.min-ol-8-arm64']
 imageMap['us-east-2b.min-ol-9-arm64']       = imageMap['us-east-2a.min-ol-9-arm64']
@@ -69,6 +73,7 @@ imageMap['us-east-2b.min-jammy-arm64']      = imageMap['us-east-2a.min-jammy-arm
 imageMap['us-east-2b.min-noble-arm64']      = imageMap['us-east-2a.min-noble-arm64']
 imageMap['us-east-2b.min-bullseye-arm64']   = imageMap['us-east-2a.min-bullseye-arm64']
 imageMap['us-east-2b.min-bookworm-arm64']   = imageMap['us-east-2a.min-bookworm-arm64']
+imageMap['us-east-2b.min-trixie-arm64']     = imageMap['us-east-2a.min-trixie-arm64']
 
 imageMap['us-east-2c.min-ol-8-arm64']       = imageMap['us-east-2a.min-ol-8-arm64']
 imageMap['us-east-2c.min-ol-9-arm64']       = imageMap['us-east-2a.min-ol-9-arm64']
@@ -77,6 +82,7 @@ imageMap['us-east-2c.min-jammy-arm64']      = imageMap['us-east-2a.min-jammy-arm
 imageMap['us-east-2c.min-noble-arm64']      = imageMap['us-east-2a.min-noble-arm64']
 imageMap['us-east-2c.min-bullseye-arm64']   = imageMap['us-east-2a.min-bullseye-arm64']
 imageMap['us-east-2c.min-bookworm-arm64']   = imageMap['us-east-2a.min-bookworm-arm64']
+imageMap['us-east-2c.min-trixie-arm64']     = imageMap['us-east-2a.min-trixie-arm64']
 
 priceMap = [:]
 priceMap['t2.large']   = '0.045'
@@ -96,6 +102,7 @@ userMap['min-jammy-x64']       = 'ubuntu'
 userMap['min-noble-x64']       = 'ubuntu'
 userMap['min-bullseye-x64']    = 'admin'
 userMap['min-bookworm-x64']    = 'admin'
+userMap['min-trixie-x64']      = 'admin'
 
 userMap['min-ol-8-arm64']      = 'ec2-user'
 userMap['min-ol-9-arm64']      = 'ec2-user'
@@ -104,6 +111,7 @@ userMap['min-jammy-arm64']     = 'ubuntu'
 userMap['min-noble-arm64']     = 'ubuntu'
 userMap['min-bullseye-arm64']  = 'admin'
 userMap['min-bookworm-arm64']  = 'admin'
+userMap['min-trixie-arm64']    = 'admin'
 
 initMap = [:]
 
@@ -184,20 +192,22 @@ initMap['debMap'] = '''
         echo try again
     done
 
-    if [[ ${DEB_VERSION} == "bookworm" ]]; then
+    if [ "${DEB_VERSION}" == "trixie" ]; then
+        JDK_PACKAGE="openjdk-21-jdk-headless"
+    elif [ "${DEB_VERSION}" == "bookworm" ]; then
         JDK_PACKAGE="openjdk-17-jre-headless"
     else
         JDK_PACKAGE="openjdk-11-jre-headless"
     fi
 
-    if [[ ${DEB_VERSION} == "bookworm" ]]; then
-        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JDK_PACKAGE} git
+    if [ "${DEB_VERSION}" = "bookworm" ] || [ "${DEB_VERSION}" = "trixie" ]; then
+        sudo DEBIAN_FRONTEND=noninteractive apt-get -y install ${JDK_PACKAGE} git
         sudo mv /etc/ssl /etc/ssl_old
-        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JDK_PACKAGE}
+        sudo DEBIAN_FRONTEND=noninteractive apt-get -y install ${JDK_PACKAGE}
         sudo cp -r /etc/ssl_old /etc/ssl
-        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JDK_PACKAGE}
+        sudo DEBIAN_FRONTEND=noninteractive apt-get -y install ${JDK_PACKAGE}
     else
-        sudo DEBIAN_FRONTEND=noninteractive sudo apt-get -y install ${JDK_PACKAGE} git
+        sudo DEBIAN_FRONTEND=noninteractive apt-get -y install ${JDK_PACKAGE} git
     fi
 
     sudo install -o $(id -u -n) -g $(id -g -n) -d /mnt/jenkins
@@ -213,6 +223,7 @@ initMap['min-jammy-x64']      = initMap['debMap']
 initMap['min-noble-x64']      = initMap['debMap']
 initMap['min-bullseye-x64']   = initMap['debMap']
 initMap['min-bookworm-x64']   = initMap['debMap']
+initMap['min-trixie-x64']     = initMap['debMap']
 
 initMap['min-ol-8-arm64']     = initMap['rpmMap']
 initMap['min-ol-9-arm64']     = initMap['rpmMap']
@@ -221,6 +232,7 @@ initMap['min-jammy-arm64']    = initMap['debMap']
 initMap['min-noble-arm64']    = initMap['debMap']
 initMap['min-bullseye-arm64'] = initMap['debMap']
 initMap['min-bookworm-arm64'] = initMap['debMap']
+initMap['min-trixie-arm64']   = initMap['debMap']
 
 capMap = [:]
 capMap['t2.large']   = '20'
@@ -240,6 +252,7 @@ typeMap['min-jammy-x64']      = typeMap['min-rhel-8-x64']
 typeMap['min-noble-x64']      = typeMap['min-rhel-8-x64']
 typeMap['min-bullseye-x64']   = typeMap['min-rhel-8-x64']
 typeMap['min-bookworm-x64']   = typeMap['min-rhel-8-x64']
+typeMap['min-trixie-x64']     = typeMap['min-rhel-8-x64']
 
 typeMap['min-ol-8-arm64']     = 'm7g.large'
 typeMap['min-ol-9-arm64']     = typeMap['min-ol-8-arm64']
@@ -248,6 +261,7 @@ typeMap['min-jammy-arm64']    = typeMap['min-ol-8-arm64']
 typeMap['min-noble-arm64']    = typeMap['min-ol-8-arm64']
 typeMap['min-bullseye-arm64'] = typeMap['min-ol-8-arm64']
 typeMap['min-bookworm-arm64'] = typeMap['min-ol-8-arm64']
+typeMap['min-trixie-arm64']   = typeMap['min-ol-8-arm64']
 
 execMap = [:]
 execMap['min-rhel-8-x64']     = '1'
@@ -259,6 +273,7 @@ execMap['min-jammy-x64']      = '1'
 execMap['min-noble-x64']      = '1'
 execMap['min-bullseye-x64']   = '1'
 execMap['min-bookworm-x64']   = '1'
+execMap['min-trixie-x64']     = '1'
 
 execMap['min-ol-8-arm64']     = '1'
 execMap['min-ol-9-arm64']     = '1'
@@ -267,6 +282,7 @@ execMap['min-jammy-arm64']    = '1'
 execMap['min-noble-arm64']    = '1'
 execMap['min-bullseye-arm64'] = '1'
 execMap['min-bookworm-arm64'] = '1'
+execMap['min-trixie-arm64']   = '1'
 
 devMap = [:]
 devMap['min-rhel-8-x64']     = '/dev/sda1=:80:true:gp3,/dev/sdd=:20:true:gp3'
@@ -278,6 +294,7 @@ devMap['min-jammy-x64']      = devMap['min-rhel-8-x64']
 devMap['min-noble-x64']      = devMap['min-rhel-8-x64']
 devMap['min-bullseye-x64']   = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 devMap['min-bookworm-x64']   = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
+devMap['min-trixie-x64']     = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 
 devMap['min-ol-8-arm64']     = devMap['min-rhel-8-x64']
 devMap['min-ol-9-arm64']     = devMap['min-rhel-8-x64']
@@ -286,6 +303,7 @@ devMap['min-jammy-arm64']    = devMap['min-rhel-8-x64']
 devMap['min-noble-arm64']    = devMap['min-rhel-8-x64']
 devMap['min-bullseye-arm64'] = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 devMap['min-bookworm-arm64'] = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
+devMap['min-trixie-arm64']   = '/dev/xvda=:80:true:gp3,/dev/xvdd=:20:true:gp3'
 
 labelMap = [:]
 labelMap['min-rhel-8-x64']     = 'min-rhel-8-x64'
@@ -297,6 +315,7 @@ labelMap['min-jammy-x64']      = 'min-jammy-x64'
 labelMap['min-noble-x64']      = 'min-noble-x64'
 labelMap['min-bullseye-x64']   = 'min-bullseye-x64'
 labelMap['min-bookworm-x64']   = 'min-bookworm-x64'
+labelMap['min-trixie-x64']     = 'min-trixie-x64'
 
 labelMap['min-ol-8-arm64']     = 'min-ol-8-arm64'
 labelMap['min-ol-9-arm64']     = 'min-ol-9-arm64'
@@ -305,6 +324,7 @@ labelMap['min-jammy-arm64']    = 'min-jammy-arm64'
 labelMap['min-noble-arm64']    = 'min-noble-arm64'
 labelMap['min-bullseye-arm64'] = 'min-bullseye-arm64'
 labelMap['min-bookworm-arm64'] = 'min-bookworm-arm64'
+labelMap['min-trixie-arm64']   = 'min-trixie-arm64'
 
 jvmoptsMap = [:]
 jvmoptsMap['min-rhel-8-x64']     = '-Xmx512m -Xms512m'
@@ -316,6 +336,7 @@ jvmoptsMap['min-jammy-x64']      = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-noble-x64']      = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-bullseye-x64']   = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 jvmoptsMap['min-bookworm-x64']   = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+jvmoptsMap['min-trixie-x64']     = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 
 jvmoptsMap['min-ol-8-arm64']     = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-ol-9-arm64']     = jvmoptsMap['min-rhel-8-x64']
@@ -324,6 +345,7 @@ jvmoptsMap['min-jammy-arm64']    = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-noble-arm64']    = jvmoptsMap['min-rhel-8-x64']
 jvmoptsMap['min-bullseye-arm64'] = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 jvmoptsMap['min-bookworm-arm64'] = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
+jvmoptsMap['min-trixie-arm64']   = '-Xmx512m -Xms512m --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED'
 
 // https://github.com/jenkinsci/ec2-plugin/blob/ec2-1.41/src/main/java/hudson/plugins/ec2/SlaveTemplate.java
 // https://javadoc.jenkins.io/plugin/ec2/index.html?hudson/plugins/ec2/UnixData.html
@@ -403,6 +425,7 @@ String region = 'us-east-2'
             getTemplate('min-noble-x64',       "${region}${it}"),
             getTemplate('min-bullseye-x64',    "${region}${it}"),
             getTemplate('min-bookworm-x64',    "${region}${it}"),
+            getTemplate('min-trixie-x64',      "${region}${it}"),
             getTemplate('min-ol-8-arm64',      "${region}${it}"),
             getTemplate('min-ol-9-arm64',      "${region}${it}"),
             getTemplate('min-alma-10-arm64',   "${region}${it}"),
@@ -410,6 +433,7 @@ String region = 'us-east-2'
             getTemplate('min-noble-arm64',     "${region}${it}"),
             getTemplate('min-bullseye-arm64',  "${region}${it}"),
             getTemplate('min-bookworm-arm64',  "${region}${it}"),
+            getTemplate('min-trixie-arm64',    "${region}${it}"),
         ],                                       // List<? extends SlaveTemplate> templates
         '',
         ''
